# src/tsoa/swagger.json
@@ -71,6 +71,10 @@
 			},
 			"OrderRequest": {
 				"properties": {
+					"total": {
+						"type": "number",
+						"format": "double"
+					},
 					"items": {
 						"items": {
 							"$ref": "#/components/schemas/OrderItem"
@@ -79,6 +83,7 @@
 					}
 				},
 				"required": [
+					"total",
 					"items"
 				],
 				"type": "object"
@@ -226,7 +231,9 @@
 				],
 				"security": [],
 				"parameters": []
-			},
+			}
+		},
+		"/orders/create": {
 			"post": {
 				"operationId": "CreateOrder",
 				"responses": {
@@ -236,6 +243,16 @@
 							"application/json": {
 								"schema": {
 									"$ref": "#/components/schemas/Order"
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
 								}
 							}
 						}
